# oom_guard

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  USAGE.md  install.sh
.claude/plans/: descricao-simplificada-plano.md
.github/workflows/: ci.yml  release.yml
examples/: demo_phases_1_3.rs
scripts/: build-release.sh
src/: lib.rs  main.rs
src/config/: args.rs  args.rs.backup  env.rs  mod.rs
src/daemon/: mod.rs  service.rs
src/killer/: mod.rs  selector.rs  signals.rs
src/monitor/: meminfo.rs  mod.rs  process.rs
src/notify/: hooks.rs  mod.rs
systemd/: oom_guard.service
